done quan ly xe (xe, hang xe, loai xe)